fix jump and add counter

--- a/style.css
+++ b/style.css
@@ -38,8 +38,8 @@ body {
   box-shadow: 0 0 10px 2px rgba(255, 223, 0, 0.8);
 }
 
-/*#puntos {
+#puntos {
   font-size: 20px;
   text-align: center;
   margin: 10px 0;
-}*/
+}
